moved preset apply logic